Fixed image visibility

--- a/css/index.css
+++ b/css/index.css
@@ -10,14 +10,6 @@ list-style: none;
 padding-left: 0;
 }
 
-.background-section {
-    background-image: url("/images/logo/facebook-cover.png");
-    background-size:cover;
-    background-position: center;
-    background-repeat: no-repeat;
-    min-height: 80vh;
-}
-
   body, html {
     margin: 0;
     padding: 0;
@@ -41,17 +33,6 @@ padding-left: 0;
     width: 100%;
     height: 100%;
 }
-
-@media (max-width: 1110px) {
-    .background-section {
-       background-image: url("/images/logo/facebook-cover-smaller.png");
-       background-size:cover;
-       background-position: center;
-       background-repeat: no-repeat;
-    }
-}
-
-
 
 .user{
   font-size: 20px;
